crates/wasmer-pack/src/js/snapshots/wasmer_pack__js__tests__generated_files-10.snap
---
source: crates/wasmer-pack/src/js/mod.rs
expression: "files[\"package/src/bindings/wasmer-pack/browser.d.ts\"].utf8_contents().unwrap()"
---
export function addBrowserToImports(imports: any, obj: Browser, get_export: (name: string) => WebAssembly.ExportValue): void;
export interface Browser {
  greet(who: string): string;
}

