crates/wasmer-pack/src/js/snapshots/wasmer_pack__js__tests__generated_files-4.snap
---
source: crates/wasmer-pack/src/js/mod.rs
expression: "files[\"package/src/commands/second-with-dashes.d.ts\"].utf8_contents().unwrap()"
---
import type { ExitStatus, RunOptions } from "../index";

export default function(options?: Partial<RunOptions>): Promise<ExitStatus>;
