crates/wasmer-pack/src/js/snapshots/wasmer_pack__js__tests__generated_files-6.snap
---
source: crates/wasmer-pack/src/js/mod.rs
expression: "files[\"package/src/index.d.ts\"].utf8_contents().unwrap()"
---
// Generated by XXX.
// @ts-ignore TS7016
import { Wasi } from "@wasmer/wasi";
import Bindings from "./bindings";

export const bindings: Bindings;
export type WasiConfig = {
    args: string[],
    env: Record<string, string>,
    fs: any,
};
export type RunOptions = {
    /** Configuration used to initialize the WASI environment. */
    wasi: Partial<WasiConfig>,
    /**
     * A user-specified WebAssembly module to use instead of the one bundled
     * with this package.
     */
    imports: Record<string, WebAssembly.ModuleImports>,
    /**
     * A user-specified WebAssembly module to use instead of the one bundled
     * with this package.
     */
    module: WebAssembly.Module,
};

export type ExitStatus = {
    code: number,
    wasi: Wasi,
};

export const commands: {
    first: (options?: Partial<RunOptions>) => Promise<ExitStatus>,
    second_with_dashes: (options?: Partial<RunOptions>) => Promise<ExitStatus>,
};

