crates/wasmer-pack/src/js/snapshots/wasmer_pack__js__tests__generated_files-7.snap
---
source: crates/wit-pack/src/js/mod.rs
expression: "files[\"package/src/index.js\"].utf8_contents().unwrap()"
---
// Generated by XXX.
import first from "./commands/first.js";
import second_with_dashes from "./commands/second-with-dashes.js";
import Bindings from "./bindings/index.js";
export const bindings = new Bindings();
export const commands = {
    first,
    second_with_dashes,
};
