crates/wasmer-pack/src/js/snapshots/wasmer_pack__js__tests__generated_files.snap
---
source: crates/wasmer-pack/src/js/mod.rs
expression: "files[\"package/package.json\"].utf8_contents().unwrap()"
---
{
  "dependencies": {
    "@wasmer/wasi": "^1.1.2"
  },
  "main": "src/index.js",
  "name": "@wasmer/wasmer-pack",
  "type": "commonjs",
  "types": "src/index.d.ts",
  "version": "1.2.3"
}
