crates/wasmer-pack/src/js/snapshots/wasmer_pack__js__tests__package_json_wasi.snap
---
source: crates/wasmer-pack/src/js/mod.rs
expression: got.utf8_contents().unwrap()
---
{
  "dependencies": {
    "@wasmer/wasi": "^1.1.2"
  },
  "main": "src/index.js",
  "name": "@wasmerio/wabt",
  "type": "commonjs",
  "types": "src/index.d.ts",
  "version": "0.0.0"
}
